--- a/Web.MainApplication/Views/DeliveryRequest/CreateDeliveryRequestClient.cshtml
+++ b/Web.MainApplication/Views/DeliveryRequest/CreateDeliveryRequestClient.cshtml
@@ -298,7 +298,7 @@
     (function ($) {
         //Date picker
         $('#DeliveryRequestTime').datetimepicker({
-            format: 'MM/DD/YYYY HH:mm:ss'
+            format: 'DD/MM/YYYY HH:mm:ss'
         });
         $("#contractLine").number(true, 2);
 
