--- a/Web.MainApplication/Views/AspNetRoles/Edit.cshtml
+++ b/Web.MainApplication/Views/AspNetRoles/Edit.cshtml
@@ -38,13 +38,13 @@
                 </div>
             </div>
 
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.Type, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("Type", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Type, "", new { @class = "text-danger" })
                 </div>
-            </div>
+            </div>*@
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Remark, htmlAttributes: new { @class = "control-label col-md-2" })
