--- a/Web.MainApplication/Views/Employee/Create.cshtml
+++ b/Web.MainApplication/Views/Employee/Create.cshtml
@@ -90,7 +90,7 @@
 <script type="text/javascript">
     (function ($) {
         $('#EMPLOYEEJOINAT').datetimepicker({
-            format: 'MM/DD/YYYY HH:mm:ss'
+            format: 'DD/MM/YYYY HH:mm:ss'
         });
     }(jQuery));
 </script>
