--- a/Web.MainApplication/Views/TransactionProduct/ConvertProduct.cshtml
+++ b/Web.MainApplication/Views/TransactionProduct/ConvertProduct.cshtml
@@ -113,7 +113,7 @@
     $(document).ready(function () {
 
         $('#ConvertionTime').datetimepicker({
-            format: 'MM/DD/YYYY HH:mm:ss'
+            format: 'DD/MM/YYYY HH:mm:ss'
         });
 
 
