--- a/Web.MainApplication/Views/TransactionProduct/MixProduct.cshtml
+++ b/Web.MainApplication/Views/TransactionProduct/MixProduct.cshtml
@@ -102,7 +102,7 @@
     $(document).ready(function () {
 
         $('#MixingTime').datetimepicker({
-            format: 'MM/DD/YYYY HH:mm:ss'
+            format: 'DD/MM/YYYY HH:mm:ss'
         });
 
         $("#BatchMixCode").on("change", function () {
@@ -129,110 +129,12 @@
                 }, entityApiUrl + '?entitas=BatchMix&filter=BatchMixCode=="' + selectedBatchMix + '"');
 
 
-                //------------- Armada ---------
-                //AjaxCall(function (output) {
-                //    console.log(output);
-                //    $.each(output.data, function (key, value) {
-                //        $("#ARMADA").append('<option value="' + value["ARMADAID"] + '">' + value["ARMADAID"] + " - " + value["ARMADANAME"] + " - " + value["ARMADACAPACITYINKG"] + ' kg</option>');
-
-                //    });
-
-                //}, entityApiUrl + '?entitas=ARMADA&filter=SiteName=="' + selectedSite + '"');
-
-                //--------------- Product ------------
-                //AjaxCall(function (output) {
-
-                //    console.log(output);
-                //    $.each(output.data, function (keyProduct, valueProduct) {
-
-
-                //        $("#PRODUCT").append('<option value="' + valueProduct["PRODUCTID"] + '">' + valueProduct["PRODUCTNAME"]);
-
-                //    });
-
-                //}, entityApiUrl + '?entitas=PRODUCT&filter=TypeMaterial="Raw"');
-
-
 
             }
 
 
         });
-
-        @*
-        $("#Site").on("change", function () {
-
-            $("#SourceProudct option").not(':first-child').each(function (index) {
-                $(this).remove();
-            });
-
-            var selectedSite = $("#Site").val();
-
-            if (selectedSite != "") {
-                AjaxCall(function (output) {
-                    console.log(output);
-                    $.each(output.data, function (key, value) {
-                        //$("#SourceProudct").append('<option value="' + value["EMPLOYEEID"] + '">' + value["EMPLOYEEID"] + " - " + value["EMPLOYEEFULLNAME"] + '</option>');
-                        AjaxCall(function (outpute) {
-                            $.each(outpute.data, function (keye, valuee) {
-                                $("#SourceProudct").append('<option value="' + valuee["PRODUCTID"] + '" ' + ("@Model.SourceProudct" === valuee["PRODUCTID"] ? "selected":"") +'>' + valuee["PRODUCTID"] + " - " + valuee["PRODUCTNAME"] + ', Total Stock In Site = ' + value["TotalStock"] + ' ton</option>');
-
-                            });
-
-                        }, entityApiUrl + '?entitas=PRODUCT&filter=PRODUCTID=="' + value["ProductId"] + '"');
-                    });
-
-                }, entityApiUrl + '?entitas=ProductSite&filter=SiteName=="' + selectedSite + '"');
-
-
-                //------------- Armada ---------
-                //AjaxCall(function (output) {
-                //    console.log(output);
-                //    $.each(output.data, function (key, value) {
-                //        $("#ARMADA").append('<option value="' + value["ARMADAID"] + '">' + value["ARMADAID"] + " - " + value["ARMADANAME"] + " - " + value["ARMADACAPACITYINKG"] + ' kg</option>');
-
-                //    });
-
-                //}, entityApiUrl + '?entitas=ARMADA&filter=SiteName=="' + selectedSite + '"');
-
-                //--------------- Product ------------
-                //AjaxCall(function (output) {
-
-                //    console.log(output);
-                //    $.each(output.data, function (keyProduct, valueProduct) {
-
-
-                //        $("#PRODUCT").append('<option value="' + valueProduct["PRODUCTID"] + '">' + valueProduct["PRODUCTNAME"]);
-
-                //    });
-
-                //}, entityApiUrl + '?entitas=PRODUCT&filter=TypeMaterial="Raw"');
-
-
-
-            }
-
-
-        });
-        $("#Site").change();
-        $("#BatchCode").on("change", function () {
-            var selectedBatchCode = $("#BatchCode").val();
-            $("#batchDetailInformationChild").html("");
-            if (selectedBatchCode != "") {
-                var htmlDetail = "";
-                AjaxCall(function (output) {
-                    console.log(output);
-                    var counter = 1;
-                    $.each(output.data, function (key, value) {
-
-                        htmlDetail = htmlDetail + ("<strong>" + counter.toString() + ". Batch Code = " + value["BatchCode"] + "</br> Product Id = " + value["ProductId"] + "<br/> Product Name =  " + value["PRODUCT"]["PRODUCTNAME"] + "<br/> Product Percentage = " + value["ProductPercentage"] + " %</strong><br/><br/>");
-                        counter++;
-                    });
-                    $("#batchDetailInformationChild").append(htmlDetail);
-                }, entityApiUrl + '?entitas=BatchProduct&filter=BatchCode=="' + selectedBatchCode + '"');
-
-            }
-        });
-        $("#BatchCode").change();*@
+        $("#BatchMixCode").change();
+        
     });
 </script>
